feat(server): Implement the reports API (#22)
* test(reports)

* feat(analytics): Add SmsStats virtual model

* fixup! test(reports)

* feat(server): Implement the reports API

* feat(server.reports): Get client id from header

* docs(swagger): Add reports
